--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,5 @@
-
-
-#logging.level.com.amazonaws.services.kinesis=WARN
-#logging.level.org.springframework=WARN
-#logging.level.com.er=DEBUG
-
-logging.level=DEBUG
+# logging is chatty by default, keep it down
+logging.level.com.amazonaws=WARN
 
 # enable for lots of debugging
 #logging.level.org.springframework=DEBUG
