--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,1 @@
-# logging is chatty by default, keep it down
-logging.level.com.amazonaws=WARN
-
-# enable for lots of debugging
-#logging.level.org.springframework=DEBUG
+logging.level.com.amazonaws=INFO
