--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>com.github.empiricalresults</groupId>
             <artifactId>amazon-kinesis-client</artifactId>
-            <version>v1.6.3-er</version>
+            <version>v1.6.3-er2</version>
         </dependency>
 
         <dependency>
